[package]
name        = "bulbascan"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94"
description  = "High-speed selective-proxy scanner for geo-block detection and geosite routing list generation"
license      = "AGPL-3.0"
readme       = "README.md"
repository   = "https://github.com/F0RLE/Bulbascan"
keywords     = ["geo-block", "proxy", "scanner", "routing", "geosite"]
categories   = ["command-line-utilities", "network-programming"]

# ─── Targets ──────────────────────────────────────────────────────────────────

[lib]
name = "bulbascan"
path = "src/lib.rs"

[[bin]]
name = "bulbascan"
path = "src/main.rs"

# ─── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
# Async runtime
tokio      = { version = "1.50.0", features = ["full", "sync", "signal"] }
tokio-util = "0.7.18"

# CLI
clap = { version = "4.5.60", features = ["derive", "env"] }

# HTTP — primary browser-emulation transport
wreq      = { version = "6.0.0-rc.28", default-features = false, features = ["socks", "brotli", "gzip", "charset", "json"] }
wreq-util = "3.0.0-rc.10"

# HTTP — fallback plain-rustls transport
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2", "charset", "json", "gzip", "brotli", "zstd", "socks"] }
rustls       = "0.23.37"
tokio-rustls = "0.26.4"

# Async helpers
futures      = "0.3.32"
async-channel = "2.5.0"

# Error handling
anyhow = "1.0.102"

# Serialisation
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost      = "0.14.3"
toml       = "1.0.6"

# Pattern matching
aho-corasick = "1.1.4"

# Misc
fastrand   = "2.3.0"
indicatif  = "0.18.4"
url        = "2.5.7"
console    = "0.16.2"
crossterm  = "0.28"
unicode-width = "0.2.2"

# ─── Dev / Benchmarks ─────────────────────────────────────────────────────────

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "signatures"
harness = false

# ─── Release profile ──────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
